--- a/src/components/main/main.template.html
+++ b/src/components/main/main.template.html
@@ -18,6 +18,7 @@
             <feed></feed>
         </div>
         <div class="main__notes-view">
+            <subway></subway>
             <notes-view></notes-view>
         </div>
     </div>
