--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -78,28 +78,27 @@ main {
   box-shadow: 0 0 3em -.3em rgba(0, 0, 0, 0.6);
   height: 80%;
   max-height: 32em;
-  .main__today,
-  .main__feed,
-  .main__notes-view {
+  flex-basis: 0;
+  >div {
     flex: 1;
-    width: 33.33%;
     position: relative;
+  }
+  .main__subway,
+  .main__notes-view {
+    background-color: #1c283c;
+    color: #fff;
   }
   .main__today {
     color: #fff;
     background-color: #6286c1;
     .main__today-content {
-      padding: 2em;
+      padding: 1.6em;
       >time {
         opacity: .5;
         display: block;
         margin-bottom: .6em;
       }
     }
-  }
-  .main__notes-view {
-    background-color: #1c283c;
-    color: #fff;
   }
 }
 
@@ -118,11 +117,11 @@ main {
   weather {
     text-align: right;
     .weather__current-temp {
-      font-size: 3.6em;
+      font-size: 3.2em;
       line-height: 1em;
     }
     .weather__high-low {
-      padding-right: 1.4em;
+      padding-right: .6em;
     }
   }
 }
