--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,7 @@
 @import 'components/notes-view/style.scss';
 @import 'components/notes-edit/style.scss';
 @import 'components/categories/style.scss';
+@import 'components/subway/style.scss';
 @import 'components/remote/style.scss';
 
 * {
