--- a/src/components/subway/subway.template.html
+++ b/src/components/subway/subway.template.html
@@ -1,21 +1,21 @@
 <div class="subway">
   <div class="subway__line line-{{line.name[0]}}" ng-repeat="line in data" ng-if="line.status[0]!=='GOOD SERVICE'">
     
-    <i ng-if="line.status[0]==='GOOD SERVICE'" class="fa fa-check" aria-hidden="true"></i>
     <i ng-if="line.status[0]==='PLANNED WORK'" class="fa fa-wrench" aria-hidden="true"></i>
     <i ng-if="line.status[0]==='SERVICE CHANGE'" class="fa fa-refresh" aria-hidden="true"></i>
     <i ng-if="line.status[0]==='DELAYS'" class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+    <i ng-if="line.status[0]==='SUSPENDED'" class="fa fa-pause" aria-hidden="true"></i>
     
     <div class="subway__line-name" ng-if="line.name[0]==='123'">123</div>
     <div class="subway__line-name" ng-if="line.name[0]==='456'">456</div>
-    <div class="subway__line-name" ng-if="line.name[0]==='7'"><span>7</span></div>
-    <div class="subway__line-name" ng-if="line.name[0]==='ACE'"><span>A</span><span>C</span><span>E</span></div>
-    <div class="subway__line-name" ng-if="line.name[0]==='BDFM'"><span>B</span><span>D</span><span>F</span><span>M</span></div>
-    <div class="subway__line-name" ng-if="line.name[0]==='G'"><span>G</span></div>
-    <div class="subway__line-name" ng-if="line.name[0]==='JZ'"><span>J</span><span>Z</span></div>
-    <div class="subway__line-name" ng-if="line.name[0]==='L'"><span>L</span></div>
-    <div class="subway__line-name" ng-if="line.name[0]==='NQR'"><span>N</span><span>Q</span><span>R</span></div>
-    <div class="subway__line-name" ng-if="line.name[0]==='S'"><span>S</span></div>
-    <div class="subway__line-name" ng-if="line.name[0]==='SIR'"><span>SIR</span></div>
+    <div class="subway__line-name" ng-if="line.name[0]==='7'">7</div>
+    <div class="subway__line-name" ng-if="line.name[0]==='ACE'">ACE</div>
+    <div class="subway__line-name" ng-if="line.name[0]==='BDFM'">BDFM</div>
+    <div class="subway__line-name" ng-if="line.name[0]==='G'">G</div>
+    <div class="subway__line-name" ng-if="line.name[0]==='JZ'">JZ</div>
+    <div class="subway__line-name" ng-if="line.name[0]==='L'">L</div>
+    <div class="subway__line-name" ng-if="line.name[0]==='NQR'">NQR</div>
+    <div class="subway__line-name" ng-if="line.name[0]==='S'">S</div>
+    <div class="subway__line-name" ng-if="line.name[0]==='SIR'">SIR</div>
   </div>
 </div>
