--- a/src/components/settings/style.scss
+++ b/src/components/settings/style.scss
@@ -25,7 +25,8 @@
     }
   }
   button,
-  input,
+  input[type="text"],
+  input[type="password"],
   select {
     display: block;
     width: 100%;
@@ -35,6 +36,45 @@
     margin-bottom: 1em;
     &:last-child {
       margin-bottom: 0;
+    }
+  }
+  .settings__line {
+  margin-bottom: .8em;
+    .settings__line-label {
+      display: inline-block;
+      margin-left: 24px;
+      line-height: 28px;
+    }
+    width: 100%;
+    position: relative;
+    label {
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 1;
+      background-color: #121b29;
+      &:after {
+        content: '';
+        width: 11px;
+        height: 5px;
+        position: absolute;
+        top: 9px;
+        left: 8px;
+        border: 3px solid #fff;
+        border-top: none;
+        border-right: none;
+        opacity: 0;
+        transform: rotate(-45deg);
+      }
+    }
+    input {
+      visibility: hidden;
+      &:checked + label:after {
+        opacity: 1;
+      }
     }
   }
 }
