--- a/src/components/feed/feed.template.html
+++ b/src/components/feed/feed.template.html
@@ -2,6 +2,7 @@
   <div class="feed__channel">{{channel}}</div>
   <div class="feed__loader"></div>
   <div ng-repeat="item in items track by $index" ng-if="$index===feedNumber" class="feed__item">
+    <qrcode ng-show="qr.$value===true" href="{{item.originId}}" class="feed__item-qrcode" version="2" error-correction-level="M" size="50" data="string"></qrcode>
     <div ng-if="item.visual.url && item.visual.url!=='none'" style="background-image:url('{{item.visual.url}}')" class="feed__item-image"></div>
     <div ng-class="{'feed__item-content--no-image': item.visual.url=='none' || !item.visual.url}" class="feed__item-content">
       <div class="feed__item-meta">{{item.origin.title}} &bull; <span am-time-ago="item.published"></span></div>
