--- a/src/components/feed/style.scss
+++ b/src/components/feed/style.scss
@@ -27,8 +27,6 @@
     }
   .feed__item {
     width: 100%;
-    margin-bottom: 2em;
-    position: absolute;
     overflow: hidden;
     &.ng-enter,
     &.ng-leave {
@@ -66,6 +64,12 @@
     .feed__item-meta {
       opacity: .5;
       margin-bottom: .6em;
+    }
+    .feed__item-qrcode {
+      position: absolute;
+      bottom: 1.6em;
+      right: 1.6em;
+      -webkit-filter: opacity(50%);
     }
   }
 }
