--- a/src/components/feed/style.scss
+++ b/src/components/feed/style.scss
@@ -67,7 +67,7 @@
     }
     .feed__item-qrcode {
       position: absolute;
-      top: 12em;
+      top: 12.5em;
       padding: .2em;
       right: 1em;
       border-radius: 3px;
@@ -75,7 +75,7 @@
       display: inline-block;
       width: 100px;
       height: 100px;
-      box-shadow: 0 0 .6em .1em rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 1em -.2em rgba(0, 0, 0, 0.4);
       canvas {
         width: 100%;
       }
