Removed padding for feed meta when qr code isnt in the way

--- a/src/components/feed/style.scss
+++ b/src/components/feed/style.scss
@@ -90,6 +90,9 @@
       .feed__item-qrcode {
         top: 1em;
       }
+      .feed__item-meta {
+        padding-right: 0px;
+      }
     }
   }
 }
