--- a/src/app-style.scss
+++ b/src/app-style.scss
@@ -4,6 +4,7 @@
 
 // Routes
 @import 'routes/login/style.scss';
+@import 'routes/register/style.scss';
 @import 'routes/home/style.scss';
 
 // Components
