--- a/src/components/login/login.template.html
+++ b/src/components/login/login.template.html
@@ -1,5 +1,5 @@
 <div class="login col-md-6 col-md-offset-3">
-    <h2>Login</h2>
+    <h1>Login</h1>
     <form name="form" ng-submit="authenticate()" role="form">
         <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
             <label for="username">Email</label>
@@ -15,4 +15,5 @@
             <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary">Login</button>
         </div>
     </form>
+    <p>or <a href="/register">register</a> for a new account</p>
 </div>
