Added some FTUX

--- a/src/app-style.scss
+++ b/src/app-style.scss
@@ -17,6 +17,7 @@
 @import 'components/categories/style.scss';
 @import 'components/subway/style.scss';
 @import 'components/remote/style.scss';
+@import 'components/ftux/style.scss';
 
 * {
   box-sizing: border-box;
