--- a/src/components/remote/style.scss
+++ b/src/components/remote/style.scss
@@ -71,7 +71,8 @@
       max-width: 600px;
       background-color: #1C283C;
       height: 100%;
-      overflow: auto;
+      overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
     }
   }
 }
