--- a/src/components/main/main.template.html
+++ b/src/components/main/main.template.html
@@ -2,13 +2,14 @@
     <remote></remote>
 </div>
 <div class="main-wrapper">
+  <time class="clock" style="h:mma"></time>
+  <subway></subway>
   <div class="main-wrapper__logged-in">{{firebaseUser.email}}<div ng-click="toggleInspector()" class="settings-link"><i class="fa fa-cog" aria-hidden="true"></i></div></div>
     <div class="main">
         <div class="main__today">
             <div class="main__today-content">
-                <time style="h:mma"></time>
                 <div class="today-basic">
-                    <time style="EEEE, MMMM d"></time>
+                    <time class="date" style="EEEE, MMMM d"></time>
                     <weather></weather>
                 </div>
                 <calendar></calendar>
@@ -18,7 +19,6 @@
             <feed></feed>
         </div>
         <div class="main__notes-view">
-            <subway></subway>
             <notes-view></notes-view>
         </div>
     </div>
