--- a/src/components/subway/style.scss
+++ b/src/components/subway/style.scss
@@ -1,14 +1,16 @@
 .subway {
-  padding: 1.6em 1.6em 0 1.6em;
+  position: absolute;
+  top: 1em;
+  right: 1em;
 }
 .subway__line {
   display: inline-block;
-  padding: .3em .6em;
+  padding: 0 1em;
+  line-height: 2.2em;
   border-radius: 255px;
   color: white;
   text-align: center;
   margin-right: .6em;
-  margin-bottom: .6em;
   font-family: Helvetica;
   font-size: 0.8em;
   >* {
