Made stuff a little bigger

--- a/src/components/subway/style.scss
+++ b/src/components/subway/style.scss
@@ -12,7 +12,8 @@
   text-align: center;
   margin-right: .6em;
   font-family: Helvetica;
-  font-size: 0.8em;
+  font-size: 0.9em;
+  font-weight: bold;
   >* {
     display: inline-block;
   }
