--- a/src/components/feed/style.scss
+++ b/src/components/feed/style.scss
@@ -23,7 +23,8 @@
     color: white;
     padding: .6em 1em;
     border-radius: 2em;
-    font-size: .8em;
+    font-size: .9em;
+    font-weight: bold;
     }
   .feed__item {
     width: 100%;
