Added voice recognition button.

--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -146,3 +146,13 @@ main {
   padding: 0 1em;
   font-weight: bold;
 }
+
+#skitt-listening-box {
+    height: 50px !important;
+}
+
+#skitt-ui {
+  top: 1em !important;
+  left: 1em !important;
+  bottom: auto !important;
+}
