--- a/src/components/main/main.template.html
+++ b/src/components/main/main.template.html
@@ -3,9 +3,9 @@
 </div>
 <div class="main-wrapper">
   <time class="clock" style="h:mma"></time>
-  <subway></subway>
+  <subway ng-show="showDashboard.$value===true"></subway>
   <div class="main-wrapper__logged-in">{{firebaseUser.email}}<div ng-click="toggleInspector()" class="settings-link"><i class="fa fa-cog" aria-hidden="true"></i></div></div>
-    <div class="main">
+    <div ng-show="showDashboard.$value===true" class="main">
         <div class="main__today">
             <div class="main__today-content">
                 <div class="today-basic">
