--- a/src/components/settings/settings.template.html
+++ b/src/components/settings/settings.template.html
@@ -52,6 +52,23 @@
 
     <div class="settings__section">
         <div class="settings__section-title-block">
+            <div class="settings__section-title">Misc</div>
+        </div>
+        <div class="settings__input">
+            <label>Background Image</label>
+            <input type="text" ng-model="userInfo.preferences.backgroundImage">
+        </div>
+        <div class="settings__input">
+            <div class="settings__line">
+                <input ng-model="userInfo.preferences.showDashboard" id="showDashboard" type="checkbox" ng-change="saveUserInfo()">
+                <label for="showDashboard"></label>
+                <div class="settings__line-label">Show Dashboard</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="settings__section">
+        <div class="settings__section-title-block">
             <div class="settings__section-title">New York City Subway</div>
             <div class="settings__section-description">Get real time updates about subway trains you care about.</div>
         </div>
