--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -156,3 +156,30 @@ main {
   left: 1em !important;
   bottom: auto !important;
 }
+
+.recognized-text {
+  position: absolute;
+  top: 1em;
+  z-index: 1;
+  left: 1em;
+  font-size: .9em;
+  color: #fff;
+  background-color: rgba(0,0,0,0.35);
+  line-height: 2.2em;
+  border-radius: 2em;
+  font-weight: bold;
+  .recognized-text__text {
+    padding: 0 1em;
+    display: inline-block;
+  }
+  .recognized-text__icon {
+      background-color: #62c177;
+      height: 2em;
+      width: 2em;
+      line-height: 2.2em;
+      text-align: center;
+      border-radius: 4em;
+      display: inline-block;
+      font-size: 1.2em;
+    }
+}
