--- a/src/components/settings/style.scss
+++ b/src/components/settings/style.scss
@@ -38,6 +38,9 @@
       margin-bottom: 0;
     }
   }
+  .settings__command {
+    margin-bottom: 3em;
+  }
   .settings__line {
   margin-bottom: .8em;
     .settings__line-label {
