--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -126,9 +126,12 @@ main {
     .weather__current-temp {
       font-size: 3.2em;
       line-height: 1em;
-    }
-    .weather__high-low {
-      padding-right: .6em;
+      img {
+        width: .6em;
+        vertical-align: top;
+        margin-top: 2px;
+        margin-right: 6px;
+      }
     }
   }
 }
