--- a/src/components/settings/style.scss
+++ b/src/components/settings/style.scss
@@ -32,6 +32,10 @@
     width: 100%;
     padding: 1em;
   }
+  input[type="range"] {
+    display: block;
+    width: 100%;
+  }
   button {
     margin-bottom: 1em;
     &:last-child {
